[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "echo-agent"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "ollama",
    "rich",
]

[tool.setuptools]
py-modules = ["main", "agent", "tools", "parser", "memory", "ui", "config"]

[project.scripts]
echo-start = "main:run"